concord_macros/tests/dsl/fail/fail_behavior_invalid_item.rs
use concord_macros::api;

api! {
    client InvalidBehaviorApi {
        base "https://example.com"

        behavior bad {
            path ["users"]
        }
    }
}

fn main() {}
