concord_macros/tests/dsl/fail/fail_behavior_invalid_item.stderr
error: invalid item in behavior
 --> tests/dsl/fail/fail_behavior_invalid_item.rs:8:13
  |
8 |             path ["users"]
  |             ^^^^
